# rustybot

./: .pre-commit-config.yaml  Cargo.toml  log4rs.yml
src/: main.rs
